<resources>
    <string name="app_name">ClassNotify</string>
    <string name="app_Title">ClassNotify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="student_info">Student Information</string>
    <string name="lastName_label">Last Name</string>
    <string name="enter_your_last_name">Enter your Last Name</string>
    <string name="enter_your_first_name">Enter your First Name</string>
    <string name="firstName_label">First Name</string>
    <string name="enter_your_middle_name">Enter your Middle Name</string>
    <string name="midName_label">Middle Name</string>
    <string name="enter_your_age">Enter your Age</string>
    <string name="enter_your_address">Enter your Address</string>
    <string name="age_label">Age</string>
    <string name="address_label">Address</string>
    <string name="enter_your_school">Enter your School</string>
    <string name="enter_your_department">Enter your Department</string>
    <string name="save">Save</string>
    <string name="department">Department</string>
    <string name="school">School</string>
    <string name="instructor_info">Instructor Information</string>
    <string name="enter_your_course">Enter your Course</string>
    <string name="course">Course</string>
    <string name="title_activity_front_page">frontPage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_student_form">Student Form</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="aboutTheAppContent">  Class Notify is your go-to scheduling assistant designed for students and instructors alike. This app delivers instant notifications for all your school schedules, making it easy to stay organized and on time. Whether you’re a student balancing multiple subjects or an instructor managing different classes, Class Notify ensures you never miss a beat!</string>
    <string name="appDescription">App Description: Class Notify</string>
    <string name="keyFeatures">Key Features:</string>
    <string name="appContent"><![CDATA[Student & Instructor Profiles: Custom-tailored views for students and instructors, giving each user type the tools they need to manage their schedules effectively.\n\nRoom Location Assistance: Provides clear room details so you can navigate through campus with ease.\n\nCustom Reminder Settings: Set how early you want to be reminded before each class to stay punctual and prepared.\n\n\nWith Class Notify, keeping track of your academic life is effortless. It’s the ultimate tool for students and teachers who need a quick, reliable way to stay updated and organized throughout the school day!]]></string>


    <string-array name="from_time_items">
        <item>8:00 - 8:30</item>
        <item>8:30 - 9:00</item>
        <item>9:00 - 9:30</item>
        <item>9:30 - 10:00</item>
        <item>10:00 - 10:30</item>
        <item>10:30 - 11:00</item>
        <item>11:00 - 11:30</item>
        <item>11:30 - 12:00</item>
        <item>12:00 - 12:30</item>
        <item>12:30 - 1:00</item>
        <item>1:00 - 1:30</item>
        <item>1:30 - 2:00</item>
        <item>2:00 - 2:30</item>
        <item>2:30 - 3:00</item>
        <item>3:00 - 3:30</item>
        <item>3:30 - 4:00</item>
        <item>4:00 - 4:30</item>
        <item>4:30 - 5:00</item>
    </string-array>


    <string-array name="to_time_items">
        <item>8:00 - 8:30</item>
        <item>8:30 - 9:00</item>
        <item>9:00 - 9:30</item>
        <item>9:30 - 10:00</item>
        <item>10:00 - 10:30</item>
        <item>10:30 - 11:00</item>
        <item>11:00 - 11:30</item>
        <item>11:30 - 12:00</item>
        <item>12:00 - 12:30</item>
        <item>12:30 - 1:00</item>
        <item>1:00 - 1:30</item>
        <item>1:30 - 2:00</item>
        <item>2:00 - 2:30</item>
        <item>2:30 - 3:00</item>
        <item>3:00 - 3:30</item>
        <item>3:30 - 4:00</item>
        <item>4:00 - 4:30</item>
        <item>4:30 - 5:00</item>
    </string-array>
</resources>