<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFE5CF"
    tools:context=".InstructorForm">

    <!-- Icon -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/instructor_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/student_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/instructor_info"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Last Name -->
    <TextView
        android:id="@+id/lastName_label_instructor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/lastName_label"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/lastName_text_instructor"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/cornerradius"
        android:ems="10"
        android:hint="@string/enter_your_last_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName_label_instructor" />

    <!-- First Name -->
    <TextView
        android:id="@+id/firstName_label_instructor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/firstName_label"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName_text_instructor" />

    <EditText
        android:id="@+id/firstName_text_instructor"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/cornerradius"
        android:ems="10"
        android:hint="@string/enter_your_first_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.336"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName_label_instructor" />

    <!-- Middle Name -->
    <TextView
        android:id="@+id/midName_label_instructor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/midName_label"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName_text_instructor" />

    <EditText
        android:id="@+id/midName_text_instructor"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/cornerradius"
        android:ems="10"
        android:hint="@string/enter_your_middle_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/midName_label_instructor" />

    <!-- Age -->
    <TextView
        android:id="@+id/age_label_instructor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/age_label"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/midName_text_instructor" />

    <EditText
        android:id="@+id/age_text_instructor"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/cornerradius"
        android:ems="10"
        android:hint="@string/enter_your_age"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_label_instructor" />

    <!-- Address -->
    <TextView
        android:id="@+id/address_label_instructor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/address_label"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_text_instructor" />

    <EditText
        android:id="@+id/address_text_instructor"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/cornerradius"
        android:ems="10"
        android:hint="@string/enter_your_address"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_label_instructor" />

    <!-- School -->
    <TextView
        android:id="@+id/schools_label_instructor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/school"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_text_instructor" />

    <EditText
        android:id="@+id/school_text_instructor"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/cornerradius"
        android:ems="10"
        android:hint="@string/enter_your_school"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.337"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/schools_label_instructor" />

    <!-- Department -->
    <TextView
        android:id="@+id/department_label_instructor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/department"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/school_text_instructor" />

    <EditText
        android:id="@+id/department_text_instructor"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/cornerradius"
        android:ems="10"
        android:hint="@string/enter_your_department"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/department_label_instructor" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#D6B7AD"
        android:elevation="10dp"
        android:onClick="openMainInstructor"
        android:shadowColor="#090909"
        android:text="@string/save"
        android:textColor="#ED434040"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/department_text_instructor" />

</androidx.constraintlayout.widget.ConstraintLayout>
